<package>
  <name>protobuf3_4_1_catkin</name>
  <version>2.6.1</version>
  <description>protobuf3_4_1_catkin</description>
  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
